Fix: set more rules to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
   "rules": {
     "jsx-a11y/label-has-associated-control": 0,
     "import/prefer-default-export": 0,
+    "react/jsx-no-bind": 0,
+    "react/jsx-props-no-spreading": 0,
     "react/react-in-jsx-scope": 0
   }
 }
