--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-and-vite",
+  "name": "github-search-using-react-and-vite",
   "private": true,
   "version": "0.0.0",
   "scripts": {
